--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "gen-theme": "npx @chakra-ui/cli typegen ./src/theme/index.ts"
   },
   "dependencies": {
     "@chakra-ui/react": "^3.15.0",
