--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   "dependencies": {
     "@chakra-ui/react": "^3.15.0",
     "@emotion/react": "^11.14.0",
+    "@hookform/resolvers": "^5.0.1",
     "@tanstack/react-query": "^5.71.10",
     "axios": "^1.8.4",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-hook-form": "^7.55.0",
+    "react-icons": "^5.5.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
