--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^5.0.1",
     "@tanstack/react-query": "^5.71.10",
     "axios": "^1.8.4",
+    "js-cookie": "^3.0.5",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
@@ -27,6 +28,7 @@
     "@eslint/eslintrc": "^3",
     "@tanstack/eslint-plugin-query": "^5.71.5",
     "@tanstack/react-query-devtools": "^5.71.10",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
