feat: Improve middleware matcher regex

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "gen-theme && next build",
     "start": "next start",
     "lint": "next lint",
     "gen-theme": "npx @chakra-ui/cli typegen ./src/theme/index.ts"
